[package]
name = "rtree"
version = "0.1.4"
authors = ["Josh Baker <joshbaker77@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/tidwall/rtree.rs"
documentation = "https://docs.rs/rtree_rs/"
description = "R-tree for Rust"

[lib]
doctest = false

[dependencies]
arrayvec = "0.7.4"
blink-alloc = "0.3.0"

[dev-dependencies]
fastrand = "2.0.0"
criterion = "0.5.1"
rtree_rs = "0.1.4"
rstar = "0.11.0"
lotsa = "0.2.0"

[[bench]]
name = "benchmark"
harness = false